# bonnetal

./: .dockerignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  readme.md  test.sh
deploy/: readme.md
deploy/src/classification/: readme.md
deploy/src/classification/lib/: CMakeLists.txt  package.xml
deploy/src/classification/lib/include/: net.hpp  netPytorch.hpp  netTensorRT.hpp  selector.hpp
deploy/src/classification/lib/src/: net.cpp  netPytorch.cpp  netTensorRT.cpp  selector.cpp
deploy/src/classification/msg/: CMakeLists.txt  package.xml
deploy/src/classification/msg/msg/: classification.msg
deploy/src/classification/ros/: CMakeLists.txt  package.xml
deploy/src/classification/ros/config/: cfg.yaml
deploy/src/classification/ros/include/: handler.hpp
deploy/src/classification/ros/launch/: bonnetal_classification.launch  bonnetal_classification_debug.launch  bonnetal_classification_webcam_sample.launch
deploy/src/classification/ros/src/: handler.cpp  node.cpp
deploy/src/classification/standalone/: CMakeLists.txt  package.xml
deploy/src/classification/standalone/include/: infer.hpp
deploy/src/classification/standalone/src/: infer_img.cpp  infer_video.cpp
deploy/src/detection/: readme.md
deploy/src/instances/: readme.md
deploy/src/segmentation/: readme.md
deploy/src/segmentation/lib/: CMakeLists.txt  package.xml
deploy/src/segmentation/lib/include/: net.hpp  netPytorch.hpp  netTensorRT.hpp  selector.hpp
deploy/src/segmentation/lib/src/: net.cpp  netPytorch.cpp  netTensorRT.cpp  selector.cpp
deploy/src/segmentation/ros/: CMakeLists.txt  package.xml
deploy/src/segmentation/ros/config/: cfg.yaml
deploy/src/segmentation/ros/include/: handler.hpp
deploy/src/segmentation/ros/launch/: bonnetal_segmentation.launch  bonnetal_segmentation_debug.launch  bonnetal_segmentation_webcam_sample.launch
deploy/src/segmentation/ros/src/: handler.cpp  node.cpp
deploy/src/segmentation/standalone/: CMakeLists.txt  package.xml
deploy/src/segmentation/standalone/src/: infer_img.cpp  infer_video.cpp
docker/: install-nvidia-docker.sh  readme.md
docker/base/: Dockerfile
docker/runtime/: Dockerfile
train/: readme.md
train/auxiliary/: calculate_means_stds.py  calculate_segmentation_weights.py  jetsonbenchmark.md
train/backbones/: ERFNet.py  config.py  darknet.py  mobilenetv2.py  resnet.py
train/common/: boxmeter.py  layers.py  onehot.py  oneshot.py  projections.py  trtCalibINT8.py
train/tasks/classification/: infer_img.py  infer_video.py  make_deploy_model.py  readme.md  train.py
train/tasks/classification/config/cifar10/: ERFNet.yaml  mobilenetsv2.yaml
train/tasks/classification/config/imagenet/: ERFNet.yaml  darknet21.yaml  darknet53.yaml  mobilenetsv2.yaml
train/tasks/classification/config/mnist/: ERFNet.yaml  mobilenetsv2.yaml  resnet18.yaml
train/tasks/classification/dataset/cifar10/: parser.py
train/tasks/classification/dataset/imagenet/: parser.py
train/tasks/classification/dataset/mnist/: parser.py
train/tasks/classification/modules/: classifier.py  head.py  traceSaver.py  trainer.py  user.py  userCaffe2.py  userPytorch.py  userTensorRT.py
train/tasks/counting/: readme.md
train/tasks/features/: readme.md
train/tasks/segmentation/: infer_img.py  infer_video.py  jetsonbenchmark.md  make_deploy_model.py  readme.md  train.py
train/tasks/segmentation/config/cityscapes/: ERFNet.yaml  darknet21_aspp.yaml  darknet53_aspp.yaml  darknet53_aspp_res.yaml  mobilenetv2_aspp.yaml  mobilenetv2_aspp_res.yaml  mobilenetv2_aspp_res_attention.yaml
train/tasks/segmentation/config/coco/: mobilenetv2_aspp_res.yaml  mobilenetv2_aspp_res_attention.yaml
train/tasks/segmentation/config/mapillary/: darknet53_aspp_res.yaml  mobilenetv2_aspp_res.yaml  video_remap.yaml
train/tasks/segmentation/config/pascal/: mobilenetv2_aspp_res.yaml  mobilenetv2_aspp_res_attention.yaml
train/tasks/segmentation/config/persons/: ERFNet.yaml  mobilenetv2_aspp.yaml  mobilenetv2_aspp_res.yaml
train/tasks/segmentation/config/synthia/: mobilenetv2_aspp_res.yaml
train/tasks/segmentation/dataset/cityscapes/: parser.py
train/tasks/segmentation/dataset/coco/: cfg.yaml  generate_gt.py  parser.py
train/tasks/segmentation/dataset/mapillary/: parser.py
train/tasks/segmentation/dataset/pascal/: parser.py
train/tasks/segmentation/dataset/persons/: parser.py
train/tasks/segmentation/dataset/synthia/: parser.py
train/tasks/segmentation/decoders/: ERFNet.py  aspp_progressive.py  aspp_residual.py  aspp_residual_attention.py
train/tasks/segmentation/modules/: colorizer.py  custom_losses.py  head.py  ioueval.py  segmentator.py  traceSaver.py  trainer.py  user.py  userCaffe2.py  userPytorch.py  userTensorRT.py
