<?xml version="1.0"?>
<package format="2">
  <name>bonnetal_segmentation_ros</name>
  <version>0.1.0</version>
  <description>ROS Nodes for Segmentation using Bonnetal</description>
  <maintainer email="amilioto@uni-bonn.de">Andres Milioto</maintainer>
  <author email="amilioto@uni-bonn.de">Andres Milioto</author>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>bonnetal_segmentation_msg</depend>
  <depend>bonnetal_segmentation_lib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>boost</depend>

</package>